--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,14 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+#sqlite
+#DB_CONNECTION=sqlite
+#DB_DATABASE=E:/coursework/demo/database/database.sqlite
+#DB_FOREIGN_KEYS=true
+
+
+
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
